--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "license": "WTFPL",
   "scripts": {
     "compile": "rimraf index.js && babel -d . src/",
-    "prepublish": "npm run compile",
-    "lint": "eslint src tests"
+    "prepublish": "npm run compile"
   },
   "repository": {
     "type": "git",
@@ -34,9 +33,6 @@
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
-    "eslint": "^2.9.0",
-    "eslint-config-skbkontur-retail": "^1.0.1",
-    "eslint-plugin-jasmine": "^1.8.1",
     "rimraf": "^2.5.2"
   },
   "engines": {
