--- a/package.json
+++ b/package.json
@@ -2,7 +2,13 @@
   "name": "stylelint-teamcity-formatter",
   "version": "2.0.0",
   "description": "Teamcity formatter for stylelint",
-  "main": "index.js",
+  "main": "index.cjs",
+  "module": "index.js",
+  "type": "module",
+  "exports": {
+    "require": "./index.cjs",
+    "import": "./index.js"
+  },
   "author": "tihonove <tihonov.ea@gmail.com>",
   "contributors": [
     {
@@ -10,11 +16,11 @@
       "email": "tihonov.ea@gmail.com"
     }
   ],
-  "license": "WTFPL",
   "scripts": {
-    "build": "rimraf index.js && babel -d . src/",
-    "watch": "rimraf index.js && babel --watch -d . src/",
-    "prepublish": "npm run compile"
+  "build:cjs": "BABEL_ENV=cjs babel src/index.js --out-file index.cjs",
+  "build:esm": "BABEL_ENV=esm babel src/index.js --out-file index.js",
+    "build": "npm run build:cjs && npm run build:esm",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -25,16 +31,13 @@
   },
   "files": [
     "index.js",
+    "index.cjs",
     "src/"
   ],
-  "dependencies": {},
   "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-core": "^6.7.6",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "rimraf": "^2.5.2"
+    "@babel/cli": "^7.28.3",
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3"
   },
   "engines": {
     "node": "*"
