--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
   "devDependencies": {
     "@babel/cli": "^7.28.3",
     "@babel/core": "^7.28.3",
-    "@babel/preset-env": "^7.28.3"
+  "@babel/preset-env": "^7.28.3",
+  "babel-plugin-add-module-exports": "^1.0.4"
   },
   "engines": {
     "node": "*"
@@ -49,6 +50,7 @@
     "scss lint",
     "less lint",
     "stylelint",
-    "javascript"
+    "javascript",
+    "stylelint-formatter"
   ]
 }
